--- a/package.json
+++ b/package.json
@@ -5,24 +5,33 @@
     "scripts": {
         "dev": "vite --host",
         "build": "vue-tsc --noEmit && vite build",
-        "preview": "vite preview",
-        "test:unit": "vitest",
         "build-only": "vite build",
+        "serve": "vite preview",
+        "test:unit": "vitest",
         "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-        "format": "prettier --write src/"
+        "format": "prettier --write src/",
+        "commit": "git add . && git cz"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-customizable"
+        },
+        "cz-customizable": {
+            "config": "./.cz-config.cjs"
+        }
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.1.0",
-        "axios": "^1.4.0",
+        "axios": "^1.5.0",
         "dayjs": "^1.11.9",
         "echarts": "^5.4.3",
-        "element-plus": "^2.3.9",
+        "element-plus": "^2.3.12",
         "jsbarcode": "^3.11.5",
         "lodash-es": "^4.17.21",
         "mitt": "^3.0.1",
         "nprogress": "^0.2.0",
-        "pinia": "^2.1.4",
+        "pinia": "^2.1.6",
         "print-js": "^1.6.0",
         "qrcode.vue": "^3.4.1",
         "store2": "^2.14.2",
@@ -31,36 +40,37 @@
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
-        "@rushstack/eslint-patch": "^1.3.2",
-        "@tsconfig/node18": "^18.2.0",
-        "@types/jsdom": "^21.1.1",
-        "@types/lodash-es": "^4.17.8",
-        "@types/node": "^18.17.0",
-        "@vitejs/plugin-vue": "^4.2.3",
-        "@vitejs/plugin-vue-jsx": "^3.0.1",
+        "@rushstack/eslint-patch": "^1.3.3",
+        "@tsconfig/node18": "^18.2.1",
+        "@types/jsdom": "^21.1.2",
+        "@types/lodash-es": "^4.17.9",
+        "@types/node": "^20.5.9",
+        "@vitejs/plugin-vue": "^4.3.4",
+        "@vitejs/plugin-vue-jsx": "^3.0.2",
         "@vue/eslint-config-prettier": "^8.0.0",
         "@vue/eslint-config-typescript": "^11.0.3",
         "@vue/test-utils": "^2.4.1",
         "@vue/tsconfig": "^0.4.0",
-        "eslint": "^8.45.0",
-        "eslint-plugin-vue": "^9.15.1",
+        "cz-customizable": "^7.0.0",
+        "eslint": "^8.48.0",
+        "eslint-plugin-vue": "^9.17.0",
         "husky": "^8.0.3",
         "jsdom": "^22.1.0",
-        "lint-staged": "^13.2.3",
+        "lint-staged": "^14.0.1",
         "npm-run-all": "^4.1.5",
-        "prettier": "^3.0.0",
+        "prettier": "^3.0.3",
         "sass": "^1.66.1",
-        "typescript": "~5.1.6",
+        "typescript": "~5.2.2",
         "unplugin-auto-import": "^0.16.6",
         "unplugin-element-plus": "^0.8.0",
-        "unplugin-icons": "^0.16.5",
-        "unplugin-vue-components": "^0.25.1",
-        "unplugin-vue-define-options": "^1.3.16",
-        "vite": "^4.4.6",
-        "vite-plugin-dts": "^3.5.2",
+        "unplugin-icons": "^0.17.0",
+        "unplugin-vue-components": "^0.25.2",
+        "unplugin-vue-define-options": "^1.3.17",
+        "vite": "^4.4.9",
+        "vite-plugin-dts": "^3.5.3",
         "vite-plugin-inspect": "^0.7.38",
         "vite-plugin-vue-devtools": "1.0.0-rc.3",
-        "vitest": "^0.33.0",
-        "vue-tsc": "^1.8.8"
+        "vitest": "^0.34.3",
+        "vue-tsc": "^1.8.10"
     }
 }
