--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "build-only": "vite build",
         "serve": "vite preview",
         "test:unit": "vitest",
+        "prepare": "husky install",
         "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "format": "prettier --write src/",
@@ -40,24 +41,30 @@
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
-        "@rushstack/eslint-patch": "^1.3.3",
+        "@commitlint/cli": "^17.7.1",
+        "@commitlint/config-conventional": "^17.7.0",
         "@tsconfig/node18": "^18.2.1",
         "@types/jsdom": "^21.1.2",
         "@types/lodash-es": "^4.17.9",
         "@types/node": "^20.5.9",
         "@vitejs/plugin-vue": "^4.3.4",
         "@vitejs/plugin-vue-jsx": "^3.0.2",
-        "@vue/eslint-config-prettier": "^8.0.0",
-        "@vue/eslint-config-typescript": "^11.0.3",
         "@vue/test-utils": "^2.4.1",
         "@vue/tsconfig": "^0.4.0",
+        "@typescript-eslint/eslint-plugin": "^6.2.1",
+        "@typescript-eslint/parser": "^6.2.1",
+        "@vue/eslint-config-prettier": "^8.0.0",
+        "@vue/eslint-config-typescript": "^11.0.3",
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^8.9.0",
+        "eslint-define-config": "^1.22.0",
+        "eslint-plugin-import": "^2.28.0",
+        "eslint-plugin-prettier": "5.0.0",
+        "eslint-plugin-vue": "^9.16.1",
         "cz-customizable": "^7.0.0",
-        "eslint": "^8.48.0",
-        "eslint-plugin-vue": "^9.17.0",
         "husky": "^8.0.3",
         "jsdom": "^22.1.0",
         "lint-staged": "^14.0.1",
-        "npm-run-all": "^4.1.5",
         "prettier": "^3.0.3",
         "sass": "^1.66.1",
         "typescript": "~5.2.2",
