--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "vue-tsc --noEmit && vite build",
         "build-only": "vite build",
         "serve": "vite preview",
-        "test:unit": "vitest",
+        "test": "vitest",
         "prepare": "husky install",
         "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
