--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,19 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "types"],
-  "exclude": ["src/**/__tests__/*", "node_modules", "dist"],
+  "include": [
+        "env.d.ts",
+        // "src/**/*",
+        "src/**/*.ts",
+        "src/**/*.d.ts",
+        "src/**/*.vue",
+        "src/types/*.d.ts",
+        "vite.config.ts"
+    ],
+  "exclude": [
+        "src/**/__tests__/*",
+        "node_modules",
+        "dist"
+    ],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
