--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,9 +1,11 @@
 {
-  "extends": "./tsconfig.app.json",
-  "exclude": [],
-  "compilerOptions": {
-    "composite": true,
-    "lib": [],
-    "types": ["node", "jsdom"]
-  }
+    // extends 属性可以从另一个配置文件里继承配置
+    "extends": "./tsconfig.app.json",
+
+    "compilerOptions": {
+        // 启用项目编译
+        "composite": true,
+        // 默认所有可见的 "@types" 包会在编译过程中被包含进来，若指定了 types，只有被列出来的包才会被包含进来
+        "types": ["node", "jsdom"]
+    }
 }
