--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
     "name": "vue-app",
     "version": "1.0.0",
     "private": true,
+    "author": "wyw",
+    "license": "ISC",
     "scripts": {
         "dev": "vite --host",
         "build": "vue-tsc --noEmit && vite build",
