--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
-    // 指示哪些文件需要编译，可以添加一组文件路径，支持相对路径和绝对路径
+    // 指定哪些文件需要编译，可以添加一组文件路径，支持相对路径和绝对路径
     "files": [],
 
-    // 用于启用项目引用，与 compilerOptions.composite 结合使用
+    // 启用项目引用，与 compilerOptions.composite 结合使用
     "references": [
         {
         "path": "./tsconfig.app.json"
