--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         "@element-plus/icons-vue": "^2.1.0",
         "axios": "^1.5.0",
         "dayjs": "^1.11.9",
+        "docx-preview": "^0.1.18",
         "echarts": "^5.4.3",
         "element-plus": "^2.3.12",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
         "jsbarcode": "^3.11.5",
         "lodash-es": "^4.17.21",
+        "luckyexcel": "^1.0.1",
         "mitt": "^3.0.1",
         "nprogress": "^0.2.0",
         "pinia": "^2.1.6",
