--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
         "qrcode.vue": "^3.4.1",
         "store2": "^2.14.2",
         "vue": "^3.3.4",
+        "vue-pdf-embed": "^1.1.6",
         "vue-router": "^4.2.4",
+        "vue3-pdfjs": "^0.1.6",
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
