--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "dayjs": "^1.11.9",
         "docx-preview": "^0.1.18",
         "echarts": "^5.4.3",
-        "element-plus": "^2.3.12",
+        "element-plus": "^2.3.14",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
         "jsbarcode": "^3.11.5",
@@ -51,41 +51,42 @@
     "devDependencies": {
         "@commitlint/cli": "^17.7.1",
         "@commitlint/config-conventional": "^17.7.0",
-        "@tsconfig/node18": "^18.2.1",
-        "@types/jsdom": "^21.1.2",
+        "@tsconfig/node18": "^18.2.2",
+        "@types/file-saver": "^2.0.5",
+        "@types/jsdom": "^21.1.3",
         "@types/lodash-es": "^4.17.9",
-        "@types/node": "^20.5.9",
-        "@typescript-eslint/eslint-plugin": "^6.2.1",
-        "@typescript-eslint/parser": "^6.2.1",
+        "@types/node": "^20.6.2",
+        "@typescript-eslint/eslint-plugin": "^6.7.0",
+        "@typescript-eslint/parser": "^6.7.0",
         "@vitejs/plugin-vue": "^4.3.4",
         "@vitejs/plugin-vue-jsx": "^3.0.2",
         "@vue/eslint-config-prettier": "^8.0.0",
-        "@vue/eslint-config-typescript": "^11.0.3",
+        "@vue/eslint-config-typescript": "^12.0.0",
         "@vue/test-utils": "^2.4.1",
         "@vue/tsconfig": "^0.4.0",
         "cz-customizable": "^7.0.0",
-        "eslint": "^8.46.0",
-        "eslint-config-prettier": "^8.9.0",
-        "eslint-define-config": "^1.22.0",
-        "eslint-plugin-import": "^2.28.0",
+        "eslint": "^8.49.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-define-config": "^1.23.0",
+        "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-prettier": "5.0.0",
-        "eslint-plugin-vue": "^9.16.1",
+        "eslint-plugin-vue": "^9.17.0",
         "husky": "^8.0.3",
         "jsdom": "^22.1.0",
         "lint-staged": "^14.0.1",
         "prettier": "^3.0.3",
-        "sass": "^1.66.1",
+        "sass": "^1.67.0",
         "typescript": "~5.2.2",
         "unplugin-auto-import": "^0.16.6",
         "unplugin-element-plus": "^0.8.0",
         "unplugin-icons": "^0.17.0",
         "unplugin-vue-components": "^0.25.2",
-        "unplugin-vue-define-options": "^1.3.17",
+        "unplugin-vue-define-options": "^1.3.18",
         "vite": "^4.4.9",
         "vite-plugin-dts": "^3.5.3",
         "vite-plugin-inspect": "^0.7.38",
-        "vite-plugin-vue-devtools": "1.0.0-rc.3",
-        "vitest": "^0.34.3",
-        "vue-tsc": "^1.8.10"
+        "vite-plugin-vue-devtools": "1.0.0-rc.4",
+        "vitest": "^0.34.4",
+        "vue-tsc": "^1.8.11"
     }
 }
