--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@types/node": "^20.6.2",
         "@typescript-eslint/eslint-plugin": "^6.7.0",
         "@typescript-eslint/parser": "^6.7.0",
+        "@vitejs/plugin-legacy": "^4.1.1",
         "@vitejs/plugin-vue": "^4.3.4",
         "@vitejs/plugin-vue-jsx": "^3.0.2",
         "@vue/eslint-config-prettier": "^8.0.0",
@@ -75,14 +76,16 @@
         "jsdom": "^22.1.0",
         "lint-staged": "^14.0.1",
         "prettier": "^3.0.3",
+        "rollup-plugin-visualizer": "^5.9.2",
         "sass": "^1.67.0",
+        "terser": "^5.19.4",
         "typescript": "~5.2.2",
         "unplugin-auto-import": "^0.16.6",
         "unplugin-element-plus": "^0.8.0",
         "unplugin-icons": "^0.17.0",
         "unplugin-vue-components": "^0.25.2",
-        "unplugin-vue-define-options": "^1.3.18",
         "vite": "^4.4.9",
+        "vite-plugin-compression": "^0.5.1",
         "vite-plugin-dts": "^3.5.3",
         "vite-plugin-inspect": "^0.7.38",
         "vite-plugin-vue-devtools": "1.0.0-rc.4",
