--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.1.0",
+        "@wangeditor/editor": "^5.1.23",
+        "@wangeditor/editor-for-vue": "^5.1.12",
         "axios": "^1.5.0",
         "dayjs": "^1.11.9",
         "docx-preview": "^0.1.18",
