--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
         "element-plus": "^2.3.14",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
+        "html2canvas": "^1.4.1",
         "jsbarcode": "^3.11.5",
+        "jspdf": "^2.5.1",
         "lodash-es": "^4.17.21",
         "luckyexcel": "^1.0.1",
         "mitt": "^3.0.1",
