docs(vue-app): 添加 threejs 文件夹

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@wangeditor/editor": "^5.1.23",
         "@wangeditor/editor-for-vue": "^5.1.12",
         "axios": "^1.5.0",
+        "dat.gui": "^0.7.9",
         "dayjs": "^1.11.9",
         "docx-preview": "^0.1.18",
         "echarts": "^5.4.3",
@@ -46,6 +47,7 @@
         "print-js": "^1.6.0",
         "qrcode.vue": "^3.4.1",
         "store2": "^2.14.2",
+        "three": "^0.157.0",
         "vue": "^3.3.4",
         "vue-pdf-embed": "^1.1.6",
         "vue-router": "^4.2.4",
