--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.1.0",
+        "@vueuse/core": "^10.5.0",
         "@wangeditor/editor": "^5.1.23",
         "@wangeditor/editor-for-vue": "^5.1.12",
-        "axios": "^1.5.0",
+        "axios": "^1.5.1",
         "dat.gui": "^0.7.9",
-        "dayjs": "^1.11.9",
-        "docx-preview": "^0.1.18",
+        "dayjs": "^1.11.10",
+        "docx-preview": "^0.1.20",
         "echarts": "^5.4.3",
-        "element-plus": "^2.3.14",
+        "element-plus": "^2.4.0",
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
         "html2canvas": "^1.4.1",
@@ -43,59 +44,59 @@
         "luckyexcel": "^1.0.1",
         "mitt": "^3.0.1",
         "nprogress": "^0.2.0",
-        "pinia": "^2.1.6",
+        "pinia": "^2.1.7",
         "print-js": "^1.6.0",
         "qrcode.vue": "^3.4.1",
         "store2": "^2.14.2",
         "three": "^0.157.0",
         "vue": "^3.3.4",
-        "vue-pdf-embed": "^1.1.6",
-        "vue-router": "^4.2.4",
+        "vue-pdf-embed": "^1.2.1",
+        "vue-router": "^4.2.5",
         "vue3-pdfjs": "^0.1.6",
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "^17.7.1",
-        "@commitlint/config-conventional": "^17.7.0",
+        "@commitlint/cli": "^17.8.0",
+        "@commitlint/config-conventional": "^17.8.0",
         "@tsconfig/node18": "^18.2.2",
         "@types/file-saver": "^2.0.5",
         "@types/jsdom": "^21.1.3",
         "@types/lodash-es": "^4.17.9",
-        "@types/node": "^20.6.2",
-        "@typescript-eslint/eslint-plugin": "^6.7.0",
-        "@typescript-eslint/parser": "^6.7.0",
+        "@types/node": "^20.8.6",
+        "@typescript-eslint/eslint-plugin": "^6.7.5",
+        "@typescript-eslint/parser": "^6.7.5",
         "@vitejs/plugin-legacy": "^4.1.1",
-        "@vitejs/plugin-vue": "^4.3.4",
+        "@vitejs/plugin-vue": "^4.4.0",
         "@vitejs/plugin-vue-jsx": "^3.0.2",
         "@vue/eslint-config-prettier": "^8.0.0",
         "@vue/eslint-config-typescript": "^12.0.0",
         "@vue/test-utils": "^2.4.1",
         "@vue/tsconfig": "^0.4.0",
         "cz-customizable": "^7.0.0",
-        "eslint": "^8.49.0",
+        "eslint": "^8.51.0",
         "eslint-config-prettier": "^9.0.0",
-        "eslint-define-config": "^1.23.0",
+        "eslint-define-config": "^1.24.1",
         "eslint-plugin-import": "^2.28.1",
-        "eslint-plugin-prettier": "5.0.0",
+        "eslint-plugin-prettier": "5.0.1",
         "eslint-plugin-vue": "^9.17.0",
         "husky": "^8.0.3",
         "jsdom": "^22.1.0",
-        "lint-staged": "^14.0.1",
+        "lint-staged": "^15.0.1",
         "prettier": "^3.0.3",
         "rollup-plugin-visualizer": "^5.9.2",
-        "sass": "^1.67.0",
-        "terser": "^5.19.4",
+        "sass": "^1.69.3",
+        "terser": "^5.21.0",
         "typescript": "~5.2.2",
         "unplugin-auto-import": "^0.16.6",
         "unplugin-element-plus": "^0.8.0",
         "unplugin-icons": "^0.17.0",
         "unplugin-vue-components": "^0.25.2",
-        "vite": "^4.4.9",
+        "vite": "^4.4.11",
         "vite-plugin-compression": "^0.5.1",
-        "vite-plugin-dts": "^3.5.3",
-        "vite-plugin-inspect": "^0.7.38",
-        "vite-plugin-vue-devtools": "1.0.0-rc.4",
-        "vitest": "^0.34.4",
-        "vue-tsc": "^1.8.11"
+        "vite-plugin-dts": "^3.6.0",
+        "vite-plugin-inspect": "^0.7.40",
+        "vite-plugin-vue-devtools": "1.0.0-rc.5",
+        "vitest": "^0.34.6",
+        "vue-tsc": "^1.8.19"
     }
 }
