build(vue-app): rollup 打包手动分包

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@vueuse/core": "^10.5.0",
         "@wangeditor/editor": "^5.1.23",
         "@wangeditor/editor-for-vue": "^5.1.12",
+        "archiver": "^6.0.1",
         "axios": "^1.5.1",
         "dat.gui": "^0.7.9",
         "dayjs": "^1.11.10",
