--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "dev": "vite --host",
         "build": "vue-tsc --noEmit && vite build",
         "build-only": "vite build",
-        "serve": "vite preview",
+        "preview": "vite preview",
         "test": "vitest",
+        "test-ui": "vitest --ui",
+        "test-preview": "vite preview --outDir ./html",
         "prepare": "husky install",
         "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -26,20 +28,20 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.1.0",
-        "@vueuse/core": "^10.5.0",
+        "@vueuse/core": "^10.6.1",
         "@wangeditor/editor": "^5.1.23",
         "@wangeditor/editor-for-vue": "^5.1.12",
         "archiver": "^6.0.1",
-        "axios": "^1.5.1",
+        "axios": "^1.6.2",
         "dat.gui": "^0.7.9",
         "dayjs": "^1.11.10",
         "docx-preview": "^0.1.20",
         "echarts": "^5.4.3",
-        "element-plus": "^2.4.0",
-        "exceljs": "^4.3.0",
+        "element-plus": "^2.4.2",
+        "exceljs": "^4.4.0",
         "file-saver": "^2.0.5",
         "html2canvas": "^1.4.1",
-        "jsbarcode": "^3.11.5",
+        "jsbarcode": "^3.11.6",
         "jspdf": "^2.5.1",
         "lodash-es": "^4.17.21",
         "luckyexcel": "^1.0.1",
@@ -49,55 +51,56 @@
         "print-js": "^1.6.0",
         "qrcode.vue": "^3.4.1",
         "store2": "^2.14.2",
-        "three": "^0.157.0",
-        "vue": "^3.3.4",
+        "three": "^0.158.0",
+        "vue": "^3.3.8",
         "vue-pdf-embed": "^1.2.1",
         "vue-router": "^4.2.5",
         "vue3-pdfjs": "^0.1.6",
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "^17.8.0",
-        "@commitlint/config-conventional": "^17.8.0",
+        "@commitlint/cli": "^18.4.3",
+        "@commitlint/config-conventional": "^18.4.3",
         "@tsconfig/node18": "^18.2.2",
-        "@types/file-saver": "^2.0.5",
-        "@types/jsdom": "^21.1.3",
-        "@types/lodash-es": "^4.17.9",
-        "@types/node": "^20.8.6",
-        "@typescript-eslint/eslint-plugin": "^6.7.5",
-        "@typescript-eslint/parser": "^6.7.5",
-        "@vitejs/plugin-legacy": "^4.1.1",
-        "@vitejs/plugin-vue": "^4.4.0",
-        "@vitejs/plugin-vue-jsx": "^3.0.2",
+        "@types/file-saver": "^2.0.7",
+        "@types/jsdom": "^21.1.6",
+        "@types/lodash-es": "^4.17.12",
+        "@types/node": "^20.9.4",
+        "@typescript-eslint/eslint-plugin": "^6.12.0",
+        "@typescript-eslint/parser": "^6.12.0",
+        "@vitejs/plugin-legacy": "^5.2.0",
+        "@vitejs/plugin-vue": "^4.5.0",
+        "@vitejs/plugin-vue-jsx": "^3.1.0",
+        "@vitest/ui": "^0.34.6",
         "@vue/eslint-config-prettier": "^8.0.0",
         "@vue/eslint-config-typescript": "^12.0.0",
-        "@vue/test-utils": "^2.4.1",
+        "@vue/test-utils": "^2.4.2",
         "@vue/tsconfig": "^0.4.0",
         "cz-customizable": "^7.0.0",
-        "eslint": "^8.51.0",
+        "eslint": "^8.54.0",
         "eslint-config-prettier": "^9.0.0",
-        "eslint-define-config": "^1.24.1",
-        "eslint-plugin-import": "^2.28.1",
+        "eslint-define-config": "^2.0.0",
+        "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-prettier": "5.0.1",
-        "eslint-plugin-vue": "^9.17.0",
+        "eslint-plugin-vue": "^9.18.1",
         "husky": "^8.0.3",
         "jsdom": "^22.1.0",
-        "lint-staged": "^15.0.1",
-        "prettier": "^3.0.3",
+        "lint-staged": "^15.1.0",
+        "prettier": "^3.1.0",
         "rollup-plugin-visualizer": "^5.9.2",
-        "sass": "^1.69.3",
-        "terser": "^5.21.0",
-        "typescript": "~5.2.2",
-        "unplugin-auto-import": "^0.16.6",
+        "sass": "^1.69.5",
+        "terser": "^5.24.0",
+        "typescript": "~5.3.2",
+        "unplugin-auto-import": "^0.16.7",
         "unplugin-element-plus": "^0.8.0",
-        "unplugin-icons": "^0.17.0",
+        "unplugin-icons": "^0.17.4",
         "unplugin-vue-components": "^0.25.2",
-        "vite": "^4.4.11",
+        "vite": "^5.0.2",
         "vite-plugin-compression": "^0.5.1",
-        "vite-plugin-dts": "^3.6.0",
-        "vite-plugin-inspect": "^0.7.40",
+        "vite-plugin-dts": "^3.6.3",
+        "vite-plugin-inspect": "^0.7.42",
         "vite-plugin-vue-devtools": "1.0.0-rc.5",
         "vitest": "^0.34.6",
-        "vue-tsc": "^1.8.19"
+        "vue-tsc": "^1.8.22"
     }
 }
