--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -9,7 +9,8 @@
         // 默认所有可见的 "@types" 包会在编译过程中被包含进来，若指定了 types，只有被列出来的包才会被包含进来
         "types": [
             "node",
-            "jsdom"
+            "jsdom",
+            "vitest/globals"
         ]
     }
 }
