--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         }
     },
     "dependencies": {
+        "@amap/amap-jsapi-loader": "^1.0.1",
+        "@dataview/datav-vue3": "0.0.0-test.1672506674342",
         "@element-plus/icons-vue": "^2.3.1",
         "@vueuse/core": "^10.7.0",
         "@wangeditor/editor": "^5.1.23",
@@ -50,6 +52,7 @@
         "pinia": "^2.1.7",
         "print-js": "^1.6.0",
         "qrcode.vue": "^3.4.1",
+        "sortablejs": "^1.15.1",
         "store2": "^2.14.2",
         "three": "^0.159.0",
         "vue": "^3.3.12",
