build(vue-app): tsconfig

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,7 +28,6 @@
         "node_modules/**/*",
         "dist/**/*",
         "src/**/__tests__/*"
-
     ],
 
     // 编译选项
@@ -41,5 +40,7 @@
         "paths": {
             "@/*": ["./src/*"]
         },
+        // TS代码错误不生成编译文件
+        "noEmit": false
     }
 }
