--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
     // 启用项目引用，与 compilerOptions.composite 结合使用
     "references": [
         {
-        "path": "./tsconfig.app.json"
+            "path": "./tsconfig.app.json",
         },
         {
-        "path": "./tsconfig.node.json"
+            "path": "./tsconfig.node.json",
         },
         {
-        "path": "./tsconfig.vitest.json"
+            "path": "./tsconfig.vitest.json",
         }
     ]
 }
