--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "@vueuse/core": "^10.7.0",
         "@wangeditor/editor": "^5.1.23",
         "@wangeditor/editor-for-vue": "^5.1.12",
+        "animejs": "^3.2.2",
         "archiver": "^6.0.1",
         "axios": "^1.6.2",
         "dat.gui": "^0.7.9",
@@ -64,6 +65,7 @@
         "@commitlint/cli": "^18.4.3",
         "@commitlint/config-conventional": "^18.4.3",
         "@tsconfig/node18": "^18.2.2",
+        "@types/animejs": "^3.1.12",
         "@types/file-saver": "^2.0.7",
         "@types/jsdom": "^21.1.6",
         "@types/lodash-es": "^4.17.12",
