--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "store2": "^2.14.2",
         "three": "^0.160.0",
         "vue": "^3.4.0",
+        "vue-i18n": "^9.8.0",
         "vue-router": "^4.2.5",
         "vuedraggable": "^4.1.0"
     },
