--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "commit": "git add . && git cz",
         "write-permission": "tsc --skipLibCheck ./script/permission/get-permission.ts && node ./script/permission/get-permission.js",
         "write-api": "tsc --skipLibCheck ./script/generate-api/get-api-docs.ts && node ./script/generate-api/get-api-docs.js",
-        "generate-api": "cd ./script/generate-api && npx openapi-generator-cli generate -c openapitools.json --generator-key v2.0"
+        "generate-api": "cd ./script/generate-api && npx openapi-generator-cli generate -c openapitools.json --generator-key v2.0",
+        "translate-api": "tsc ./script/translate-api/translate-ts.ts && node ./script/translate-api/translate-ts.js && npx prettier -w ./src/locale/**.ts"
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
@@ -76,6 +77,7 @@
         "@commitlint/cli": "^18.4.3",
         "@commitlint/config-conventional": "^18.4.3",
         "@openapitools/openapi-generator-cli": "^2.7.0",
+        "@vitalets/google-translate-api": "8.0.0",
         "@tsconfig/node18": "^18.2.2",
         "@types/animejs": "^3.1.12",
         "@types/file-saver": "^2.0.7",
@@ -93,6 +95,7 @@
         "@vue/test-utils": "^2.4.3",
         "@vue/tsconfig": "^0.5.1",
         "cz-customizable": "^7.0.0",
+        "tunnel": "^0.0.6",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-define-config": "^2.1.0",
