--- a/package.json
+++ b/package.json
@@ -41,17 +41,16 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
-        "@vueuse/core": "^10.7.1",
+        "@vueuse/core": "^10.9.0",
         "@wangeditor/editor": "^5.1.23",
         "@wangeditor/editor-for-vue": "^5.1.12",
         "animejs": "^3.2.2",
-        "archiver": "^6.0.1",
-        "axios": "^1.6.3",
+        "axios": "^1.6.7",
         "dat.gui": "^0.7.9",
         "dayjs": "^1.11.10",
         "docx-preview": "^0.3.0",
-        "echarts": "^5.4.3",
-        "element-plus": "^2.4.4",
+        "echarts": "^5.5.0",
+        "element-plus": "^2.6.0",
         "exceljs": "^4.4.0",
         "file-saver": "^2.0.5",
         "html2canvas": "^1.4.1",
@@ -61,65 +60,65 @@
         "luckyexcel": "^1.0.1",
         "mitt": "^3.0.1",
         "nprogress": "^0.2.0",
-        "ol": "^8.2.0",
+        "ol": "^9.0.0",
         "pinia": "^2.1.7",
         "print-js": "^1.6.0",
         "qrcode.vue": "^3.4.1",
-        "sortablejs": "^1.15.1",
-        "store2": "^2.14.2",
-        "three": "^0.160.0",
-        "vue": "^3.4.0",
-        "vue-i18n": "^9.8.0",
-        "vue-router": "^4.2.5",
+        "sortablejs": "^1.15.2",
+        "store2": "^2.14.3",
+        "three": "^0.162.0",
+        "vue": "^3.4.21",
+        "vue-i18n": "^9.10.1",
+        "vue-router": "^4.3.0",
         "vuedraggable": "^4.1.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "^18.4.3",
-        "@commitlint/config-conventional": "^18.4.3",
-        "@openapitools/openapi-generator-cli": "^2.7.0",
-        "@vitalets/google-translate-api": "8.0.0",
+        "@commitlint/cli": "^19.0.3",
+        "@commitlint/config-conventional": "^19.0.3",
+        "@openapitools/openapi-generator-cli": "^2.11.0",
+        "@vitalets/google-translate-api": "9.2.0",
         "@tsconfig/node18": "^18.2.2",
         "@types/animejs": "^3.1.12",
         "@types/file-saver": "^2.0.7",
         "@types/jsdom": "^21.1.6",
         "@types/lodash-es": "^4.17.12",
-        "@types/node": "^20.10.5",
-        "@typescript-eslint/eslint-plugin": "^6.16.0",
-        "@typescript-eslint/parser": "^6.16.0",
-        "@vitejs/plugin-legacy": "^5.2.0",
-        "@vitejs/plugin-vue": "^5.0.0",
+        "@types/node": "^20.11.24",
+        "@typescript-eslint/eslint-plugin": "^7.1.1",
+        "@typescript-eslint/parser": "^7.1.1",
+        "@vitejs/plugin-legacy": "^5.3.1",
+        "@vitejs/plugin-vue": "^5.0.4",
         "@vitejs/plugin-vue-jsx": "^3.1.0",
-        "@vitest/ui": "^1.1.0",
-        "@vue/eslint-config-prettier": "^8.0.0",
+        "@vitest/ui": "^1.3.1",
+        "@vue/eslint-config-prettier": "^9.0.0",
         "@vue/eslint-config-typescript": "^12.0.0",
-        "@vue/test-utils": "^2.4.3",
+        "@vue/test-utils": "^2.4.4",
         "@vue/tsconfig": "^0.5.1",
         "cz-customizable": "^7.0.0",
         "tunnel": "^0.0.6",
-        "eslint": "^8.56.0",
+        "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-define-config": "^2.1.0",
         "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-prettier": "5.1.2",
-        "eslint-plugin-vue": "^9.19.2",
-        "husky": "^8.0.3",
-        "jsdom": "^23.0.1",
-        "lint-staged": "^15.2.0",
-        "prettier": "^3.1.1",
+        "eslint-plugin-prettier": "5.1.3",
+        "eslint-plugin-vue": "^9.22.0",
+        "husky": "^9.0.11",
+        "jsdom": "^24.0.0",
+        "lint-staged": "^15.2.2",
+        "prettier": "^3.2.5",
         "rollup-plugin-visualizer": "^5.12.0",
-        "sass": "^1.69.6",
-        "terser": "^5.26.0",
+        "sass": "^1.71.1",
+        "terser": "^5.28.1",
         "typescript": "~5.3.3",
-        "unplugin-auto-import": "^0.17.3",
+        "unplugin-auto-import": "^0.17.5",
         "unplugin-element-plus": "^0.8.0",
-        "unplugin-icons": "^0.18.1",
+        "unplugin-icons": "^0.18.5",
         "unplugin-vue-components": "^0.26.0",
-        "vite": "^5.0.10",
+        "vite": "^5.1.5",
         "vite-plugin-compression": "^0.5.1",
-        "vite-plugin-dts": "^3.7.0",
-        "vite-plugin-inspect": "^0.8.1",
-        "vite-plugin-vue-devtools": "1.0.0-rc.8",
-        "vitest": "^1.1.0",
-        "vue-tsc": "^1.8.27"
+        "vite-plugin-dts": "^3.7.3",
+        "vite-plugin-inspect": "^0.8.3",
+        "vite-plugin-vue-devtools": "7.0.16",
+        "vitest": "^1.3.1",
+        "vue-tsc": "^2.0.5"
     }
 }
