--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "write-permission": "tsc --skipLibCheck ./script/permission/get-permission.ts && node ./script/permission/get-permission.js",
         "write-api": "tsc --skipLibCheck ./script/generate-api/get-api-docs.ts && node ./script/generate-api/get-api-docs.js",
         "generate-api": "cd ./script/generate-api && npx openapi-generator-cli generate -c openapitools.json --generator-key v2.0",
-        "translate-api": "tsc ./script/translate-api/translate-ts.ts && node ./script/translate-api/translate-ts.js && npx prettier -w ./src/locale/**.ts"
+        "translate-api": "tsc ./script/translate-api/translate-ts.ts && node ./script/translate-api/translate-ts.js && npx prettier -w ./src/locale/language/**.ts"
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
