--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
         "@commitlint/cli": "^19.0.3",
         "@commitlint/config-conventional": "^19.0.3",
         "@openapitools/openapi-generator-cli": "^2.11.0",
-        "@vitalets/google-translate-api": "9.2.0",
         "@tsconfig/node18": "^18.2.2",
         "@types/animejs": "^3.1.12",
         "@types/file-saver": "^2.0.7",
@@ -85,6 +84,7 @@
         "@types/node": "^20.11.24",
         "@typescript-eslint/eslint-plugin": "^7.1.1",
         "@typescript-eslint/parser": "^7.1.1",
+        "@vitalets/google-translate-api": "9.2.0",
         "@vitejs/plugin-legacy": "^5.3.1",
         "@vitejs/plugin-vue": "^5.0.4",
         "@vitejs/plugin-vue-jsx": "^3.1.0",
@@ -94,12 +94,12 @@
         "@vue/test-utils": "^2.4.4",
         "@vue/tsconfig": "^0.5.1",
         "cz-customizable": "^7.0.0",
-        "tunnel": "^0.0.6",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-define-config": "^2.1.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-prettier": "5.1.3",
+        "eslint-plugin-simple-import-sort": "^12.0.0",
         "eslint-plugin-vue": "^9.22.0",
         "husky": "^9.0.11",
         "jsdom": "^24.0.0",
@@ -108,6 +108,7 @@
         "rollup-plugin-visualizer": "^5.12.0",
         "sass": "^1.71.1",
         "terser": "^5.28.1",
+        "tunnel": "^0.0.6",
         "typescript": "~5.3.3",
         "unplugin-auto-import": "^0.17.5",
         "unplugin-element-plus": "^0.8.0",
