--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,14 +6,6 @@
     "src/locale"
   ],
   "i18n-ally.extract.ignored": [
-    "小明",
-    "男",
-    "男",
-    "跑步",
-    "小强",
-    "骑行",
-    "小红",
-    "跳舞",
-    "女"
+    "Folder"
   ],
 }
