--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
+        "@vue-office/excel": "^1.7.11",
         "@vueuse/core": "^10.9.0",
         "@wangeditor/editor": "^5.1.23",
         "@wangeditor/editor-for-vue": "^5.1.12",
@@ -118,7 +119,7 @@
         "vite-plugin-compression": "^0.5.1",
         "vite-plugin-dts": "^3.8.1",
         "vite-plugin-inspect": "^0.8.3",
-        "vite-plugin-vue-devtools": "7.0.25",
+        "vite-plugin-vue-devtools": "7.3.9",
         "vitest": "^1.4.0",
         "vue-tsc": "^2.0.7"
     }
