--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
+        "@vue-office/docx": "^1.6.2",
         "@vue-office/excel": "^1.7.11",
+        "@vue-office/pdf": "^2.0.2",
         "@vueuse/core": "^10.9.0",
         "@wangeditor/editor": "^5.1.23",
         "@wangeditor/editor-for-vue": "^5.1.12",
         "animejs": "^3.2.2",
+        "async-validator": "^4.2.5",
         "axios": "^1.6.8",
         "dat.gui": "^0.7.9",
         "dayjs": "^1.11.10",
