--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "format": "prettier --write src/",
         "commit": "git add . && git cz",
-        "write-permission": "tsc --skipLibCheck ./script/permission/get-permission.ts && node ./script/permission/get-permission.js",
+        "write-permission": "tsc --skipLibCheck ./script/get-permission/get-permission.ts && node ./script/get-permission/get-permission.js",
         "write-api": "tsc --skipLibCheck ./script/generate-api/get-api-docs.ts && node ./script/generate-api/get-api-docs.js",
         "generate-api": "cd ./script/generate-api && npx openapi-generator-cli generate -c openapitools.json --generator-key v2.0",
         "open-api": "cd ./script/open-api && npx openapi-generator-cli generate -c openapitools.json --generator-key v2.0",
-        "sort": "eslint --fix --ext .js,.jsx,.ts,.tsx,vue ./src "
+        "sort": "eslint --fix --ext .js,.jsx,.ts,.tsx,vue ./src ",
+        "generate-router": "tsc --skipLibCheck ./script/generate-router/generate-router.ts && node ./script/generate-router/generate-router.js"
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
@@ -112,6 +113,7 @@
         "husky": "^9.0.11",
         "jsdom": "^24.0.0",
         "lint-staged": "^15.2.2",
+        "pinyin-pro": "^3.26.0",
         "prettier": "^3.2.5",
         "rollup-plugin-visualizer": "^5.12.0",
         "sass": "^1.72.0",
