--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
         "@types/jsdom": "^21.1.6",
         "@types/lodash-es": "^4.17.12",
         "@types/node": "^20.11.30",
+        "@types/tunnel": "^0.0.7",
         "@typescript-eslint/eslint-plugin": "^7.4.0",
         "@typescript-eslint/parser": "^7.4.0",
         "@vitalets/google-translate-api": "9.2.0",
