feat: 完善 generate-router 脚本

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "animejs": "^3.2.2",
         "async-validator": "^4.2.5",
         "axios": "^1.6.8",
+        "commander": "^13.1.0",
         "dat.gui": "^0.7.9",
         "dayjs": "^1.11.10",
         "docx-preview": "^0.3.0",
@@ -61,6 +62,7 @@
         "file-saver": "^2.0.5",
         "fs-extra": "^11.2.0",
         "html2canvas": "^1.4.1",
+        "inquirer": "^12.4.2",
         "jsbarcode": "^3.11.6",
         "jspdf": "^2.5.1",
         "lodash-es": "^4.17.21",
@@ -69,6 +71,7 @@
         "multiparty": "^4.2.3",
         "nprogress": "^0.2.0",
         "ol": "^9.1.0",
+        "ora": "5.4.1",
         "p-limit": "^6.2.0",
         "pinia": "^2.1.7",
         "print-js": "^1.6.0",
