--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
         "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
         "format": "prettier --write src/",
         "commit": "git add . && git cz",
-        "write-permission": "tsc --skipLibCheck ./script/get-permission/get-permission.ts && node ./script/get-permission/get-permission.js",
-        "write-api": "tsc --skipLibCheck ./script/generate-api/get-api-docs.ts && node ./script/generate-api/get-api-docs.js",
+        "write-permission": "tsc --skipLibCheck --module ESNext --moduleResolution node --esModuleInterop ./script/get-permission/get-permission.ts && node ./script/get-permission/get-permission.js",
+        "write-api": "tsc --skipLibCheck --module ESNext --moduleResolution node --esModuleInterop ./script/generate-api/get-api-docs.ts && node ./script/generate-api/get-api-docs.js",
         "generate-api": "cd ./script/generate-api && npx openapi-generator-cli generate -c openapitools.json --generator-key v2.0",
         "open-api": "cd ./script/open-api && npx openapi-generator-cli generate -c openapitools.json --generator-key v2.0",
         "sort": "eslint --fix --ext .js,.jsx,.ts,.tsx,vue ./src ",
-        "generate-router": "tsc --skipLibCheck ./script/generate-router/generate-router.ts --outDir ./script/generate-router/js && node ./script/generate-router/js/generate-router.js"
+        "generate-router": "tsc --skipLibCheck ./script/generate-router/generate-router.ts --outDir ./script/generate-router/js && node ./script/generate-router/js/generate-router.js",
+        "deploy": "tsc --skipLibCheck ./script/deploy/deploy.ts --outDir ./script/deploy/js && node ./script/deploy/js/deploy.js"
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
